objects/AcctSeedERP__Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>AP_Invoice_Line_Total_CO_POL__c</fullName>
        <description>USE THIS</description>
        <formula>AP_Line_CO_Total__c + AP_Invoice_Line_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of AP Invoices associated with the PO
Includes CO and PO Lines</inlineHelpText>
        <label>AP Invoice Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_Invoice_Line_Total__c</fullName>
        <description>DO NOT USE</description>
        <label>AP Invoice Line Total-OLD</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Roll_Up_All_Account_Payable_Lines__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AP_Line_CO_Total__c</fullName>
        <label>AP Line CO Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_Line_Total_Current_Month__c</fullName>
        <label>AP Line Total- Current Month</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_less_than_PO__c</fullName>
        <formula>IF( PO_Total__c - AP_Invoice_Line_Total_CO_POL__c &gt;0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP less than PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARRA_Compliant__c</fullName>
        <label>ARRA Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Payable_Terms__c</fullName>
        <formula>AcctSeedERP__Vendor__r.AcctSeed__Account_Payable_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AP Terms listed on the Vendor Account</inlineHelpText>
        <label>Account Payable Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accrual_Type__c</fullName>
        <inlineHelpText>PO accrual process</inlineHelpText>
        <label>Accrual Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>Development &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Misc. Job Costs</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Currency_Conversion_Rate__c</fullName>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Initial_Receive_Date__c</fullName>
        <label>Initial Receive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger_Amount__c</fullName>
        <formula>IF(ISBLANK(AcctSeedERP__Currency_Conversion_Rate__c) || AcctSeedERP__Currency_Conversion_Rate__c = 0,AcctSeedERP__Total__c,AcctSeedERP__Total__c/AcctSeedERP__Currency_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ledger Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Line_Count__c</fullName>
        <inlineHelpText>The number of purchase order lines associated with the purchase order</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Order_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date PO is submitted to Vendor
Required when PO is created
ON PO PRINTOUT</inlineHelpText>
        <label>Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchase_Order_Format__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Purchase Order Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Purchase Order</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_City__c</fullName>
        <inlineHelpText>City where material should be shipped
Pulls from the Ship To Company Account Address
PRINTS ON PO</inlineHelpText>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company where material should be shipped
Pulls from the Requisition &quot;Ship To Account&quot; field
PRINTS ON THE PO</inlineHelpText>
        <label>Shipping Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Ship To Company)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Postal_Code__c</fullName>
        <inlineHelpText>Zip Code where material should be shipped 
Pulls from the Ship To Company Account Address 
PRINTS ON PO</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_State__c</fullName>
        <inlineHelpText>State where material should be shipped 
Pulls from the Ship To Company Account Address 
PRINTS ON PO</inlineHelpText>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Street__c</fullName>
        <inlineHelpText>Street Address where material should be shipped 
Pulls from the Ship To Company Account Address 
PRINTS ON PO</inlineHelpText>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Status__c</fullName>
        <inlineHelpText>Status of PO
Controlled by Procurement and Accounting</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Aaron Approved</fullName>
                </value>
                <value>
                    <fullName>Procurement Approved</fullName>
                </value>
                <value>
                    <fullName>PM Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor Received PO</fullName>
                </value>
                <value>
                    <fullName>Vendor Shipped Material</fullName>
                </value>
                <value>
                    <fullName>Partially Received: Warehouse</fullName>
                </value>
                <value>
                    <fullName>Partially Received: Job Site</fullName>
                </value>
                <value>
                    <fullName>Received In-Full: Warehouse</fullName>
                </value>
                <value>
                    <fullName>Received In-Full: Job Site</fullName>
                </value>
                <value>
                    <fullName>Material Deposit Paid</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Need More Information</fullName>
                </value>
                <value>
                    <fullName>Invoice Processed</fullName>
                </value>
                <value>
                    <fullName>Order on Hold</fullName>
                </value>
                <value>
                    <fullName>Paid out of Branch Account</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invoice Received</fullName>
                </value>
                <value>
                    <fullName>Pending Retention Billing</fullName>
                </value>
                <value>
                    <fullName>Bill and Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Commissioning</fullName>
                </value>
                <value>
                    <fullName>Pending Next Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Total__c</fullName>
        <label>Total</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Total__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Type__c</fullName>
        <inlineHelpText>Notes whether the PO is for Material or Non-Material
Automatically updated depending on the requisitions and PO Lines</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Non-Material</fullName>
                    <default>true</default>
                    <label>Non-Material</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_City__c</fullName>
        <inlineHelpText>Pulls from the city listed on the Vendor Account</inlineHelpText>
        <label>Vendor City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup a vendor contact
Must be a Contact in Salesforce</inlineHelpText>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders (Vendor Contact)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_Country__c</fullName>
        <inlineHelpText>Pulls from the country listed on the Vendor Account</inlineHelpText>
        <label>Vendor Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_Postal_Code__c</fullName>
        <inlineHelpText>Pulls from the zip code listed on the Vendor Account</inlineHelpText>
        <label>Vendor Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_State__c</fullName>
        <inlineHelpText>Pulls from the state listed on the Vendor Account</inlineHelpText>
        <label>Vendor State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor_Street__c</fullName>
        <inlineHelpText>Pulls from the street address listed on the Vendor Account</inlineHelpText>
        <label>Vendor Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor of the material or the Subcontractor performing the work
Must be an account in Salesforce</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Vendor, Customer and Vendor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>THIS FIELD DOES NOT PRINT OUT ON THE PO</inlineHelpText>
        <label>Additional Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Balance_Remaining_on_PO__c</fullName>
        <formula>PO_Total__c - AP_Invoice_Line_Total_CO_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Remaining on PO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Through__c</fullName>
        <inlineHelpText>Subcontractor PO Billed Thru Date</inlineHelpText>
        <label>Billed Through</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRG_Creator_Dept__c</fullName>
        <description>Pulls in the Department of the user who created the CRG</description>
        <formula>LH_Con_Req_Creator__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRG Creator Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Order_Total__c</fullName>
        <inlineHelpText>Total amount of the CO&apos;s related to the PO
Automatically sums up via Salesforce Trigger</inlineHelpText>
        <label>Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Con_Req_Creator_ID__c</fullName>
        <inlineHelpText>used with roll up helper to pull in ID of con req creator of service reqs</inlineHelpText>
        <label>Con Req Creator ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Req Group</label>
        <referenceTo>Con_Req_Group__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <inlineHelpText>Enter any special delivery notes
PRINTS OUT ON PO</inlineHelpText>
        <label>Delivery Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_To__c</fullName>
        <description>Pulled from quote delivery to field.</description>
        <formula>Quote__r.Delivery_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from quote delivery to field.</inlineHelpText>
        <label>Delivery To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Days_Due__c</fullName>
        <formula>AcctSeedERP__Vendor__r.AcctSeed__Discount_Days_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>AcctSeedERP__Vendor__r.AcctSeed__Discount_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Standard discount percentage- from the Vendor Account</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <description>pulls the division based on the CRG created by department and displays in print po page.</description>
        <formula>If(ISPICKVAL(Con_Req_Group__r.Owner:User.Sales_Segment__c,&apos;O&amp;M&apos;),&apos;O&amp;M&apos;,&apos;EPC&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the division based on the CRG created by department and displays in print po page.</inlineHelpText>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <inlineHelpText>Used for vendors with an MSA (mostly module vendors)-  these terms define when we title/risk transfers hands
Defaults to the Inco Terms on the Vendor Account
ON PO PRINTOUT</inlineHelpText>
        <label>Inco Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Con_Req_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used in conjunction with lookup helper</description>
        <inlineHelpText>displays name of user that created Con Req - Service Reqs only</inlineHelpText>
        <label>Serivce Req Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_PO_Rollup__c</fullName>
        <label>Material PO Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>used to set the Type field in a workflow
Rolls up the related POL &quot;Material PO&quot; Field
If yes is included, a workflow sets the Type to &quot;Material&quot; only on creation</description>
        <label>Material POL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_To_Exceed__c</fullName>
        <label>Not To Exceed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_POLs__c</fullName>
        <label>Open POLs</label>
        <summaryFilterItems>
            <field>AcctSeedERP__Purchase_Order_Line__c.PO_Line_Status__c</field>
            <operation>notEqual</operation>
            <value>Received In-Full - O&amp;M</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Received_BOL__c</fullName>
        <inlineHelpText>Date BOL (Bill of Lading) received</inlineHelpText>
        <label>Order Received (BOL)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_18_Character_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO 18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Closed_Date__c</fullName>
        <description>Set automatically to today() by workflow rule PO Closed Date whenever the Status field of a Purchase Order is set to &quot;Closed&quot;.</description>
        <inlineHelpText>Set automatically to the date the Status field is set to &quot;Closed&quot;.</inlineHelpText>
        <label>PO Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Line_Total__c</fullName>
        <inlineHelpText>Sums the PO Line Total Field on the PO Lines associated with the Purchase Order</inlineHelpText>
        <label>PO Line Total</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Total__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Notification_Time_Trigger__c</fullName>
        <description>Used by the Email vendor that PO is created workflow. Delays the email by ~1 minute. The PO Total field calculation is an asynchronous job, this gives the job time to run and population the merge forms on the email template before it is sent out.</description>
        <formula>NOW() - 0.04105</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Notification Time Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PO_Status_Change_Date__c</fullName>
        <description>records the date the status was changed. filled in by WF FU</description>
        <inlineHelpText>Records the date the status was changed</inlineHelpText>
        <label>PO Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Total__c</fullName>
        <formula>Change_Order_Total__c + Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of the Purchase Order
Includes CO&apos;s, Freight, Sales Tax</inlineHelpText>
        <label>PO Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>Payment Terms
LISTED ON THE PO PRINTOUT</inlineHelpText>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Quote.</description>
        <inlineHelpText>Look up to Quote.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retention_Percent__c</fullName>
        <inlineHelpText>Amount of Retention held on the PO
Used for Subcontractor POs only</inlineHelpText>
        <label>Retention Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Change_Date__c</fullName>
        <label>Revision Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <inlineHelpText>Increment the Revision Number when making changes to the PO.</inlineHelpText>
        <label>Revision Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Returned__c</fullName>
        <inlineHelpText>Date Sales Order Acknowledgement Returned</inlineHelpText>
        <label>SOA Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Email_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serivce_Req_Creator_Email__c</fullName>
        <inlineHelpText>Filled in via Workflow</inlineHelpText>
        <label>Service Req Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <inlineHelpText>Person who should receive the material
Does not have to be a Contact in Salesforce
PRINTS ON THE PO</inlineHelpText>
        <label>Ship To Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Telephone__c</fullName>
        <inlineHelpText>Telephone number for Ship To Contact
PRINTS ON PO</inlineHelpText>
        <label>Ship To Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <inlineHelpText>How should the product be shipped? For Major and Minor components only
PRINTS OUT ON THE PO</inlineHelpText>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <inlineHelpText>Enter any special notes for the PO here
PRINTS OUT ON THE PO</inlineHelpText>
        <label>Special Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_To_Aaron__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for Major Components Only
Alerts Aaron to review the PO for approval</inlineHelpText>
        <label>Submit To Aaron</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Total_Cost__c - Total_Freight_Allowed__c - Total_sales_tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtotal of the PO, prior to CO&apos;s, Freight, and Sales Tax
Total Cost of all related PO Lines, not including Freight or Sales Tax</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotals__c</fullName>
        <label>Subtotals</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Subtotal__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms &amp; Conditions</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Terms_Conditions__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Vendor__c</valueField>
            </filterItems>
            <filterItems>
                <field>Terms_Conditions__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Terms_Conditions__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <inlineHelpText>This is the summary of POLines.  Note that this includes use tax, which is not payable to the vendor.</inlineHelpText>
        <label>Total Cost</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.POLine_Total__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Freight_Allowed__c</fullName>
        <inlineHelpText>Total Freight Allowed on the PO
Rolls up the Freight charges on all related PO Lines</inlineHelpText>
        <label>Total Freight Allowed</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Freight__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Volume_Purchased__c</fullName>
        <label>Total Volume Purchased</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Volume_Purchase_Total__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeedERP__Purchase_Order_Line__c.Volume_PO_Line__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_sales_tax__c</fullName>
        <inlineHelpText>Total Sales Tax on the PO
Rolls up all the sales tax on the related PO Lines</inlineHelpText>
        <label>Total Sales Tax</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Line__c.Sales_Tax__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Reference__c</fullName>
        <description>Pulls the vendor ref number from quote.</description>
        <formula>Quote__r.Vendor_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the vendor ref number from quote.</inlineHelpText>
        <label>Vendor Reference #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Commitment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Volume_Commitment__c.Terms_Conditions__c</field>
                <operation>equals</operation>
                <valueField>$Source.Terms_Conditions__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Volume_Commitment__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>old_PO__c</fullName>
        <label>old PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>